Fix build
Signed-off-by: Asim Mahmood <asim.seng@gmail.com>